Move from using root to use a local (gtfs) user

--- a/ansible/roles/gtfsproxy/files/gtfsdownload.service
+++ b/ansible/roles/gtfsproxy/files/gtfsdownload.service
@@ -3,10 +3,10 @@ Description=GTFS Download
 Wants=gtfsdownload.timer
 
 [Service]
-Type=oneshot
-WorkingDirectory=/root
+User=gtfs
+Group=gtfs
+WorkingDirectory=/home/gtfs
 ExecStart=/usr/local/bin/gtfsproxy download
-RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
