--- a/ansible/roles/gtfsproxy/files/gtfsproxy.service
+++ b/ansible/roles/gtfsproxy/files/gtfsproxy.service
@@ -6,8 +6,11 @@ StartLimitBurst=5
 
 [Service]
 Type=notify
-WorkingDirectory=/root
+WorkingDirectory=/home/gtfs
+User=gtfs
+Group=gtfs
 ExecStart=/usr/local/bin/gtfsproxy serve
+AmbientCapabilities=CAP_NET_BIND_SERVICE
 Type=exec
 Restart=on-failure
 RestartSec=5s
