Move from externally managed certificates to internally managed certificates

--- a/ansible/roles/gtfsproxy/files/gtfsproxy.service
+++ b/ansible/roles/gtfsproxy/files/gtfsproxy.service
@@ -9,7 +9,7 @@ Type=notify
 WorkingDirectory=/home/gtfs
 User=gtfs
 Group=gtfs
-ExecStart=/usr/local/bin/gtfsproxy serve
+ExecStart=/usr/local/bin/gtfsproxy serve --domain=gtfsproxy.fwan.it
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 Type=exec
 Restart=on-failure
